--- a/todo
+++ b/todo
@@ -5,3 +5,8 @@ http://www.importnew.com/15671.html
 i=i++问题、
 http://soft.chinabyte.com/database/279/11431779.shtml
 http://blog.csdn.net/wangcunhuazi/article/details/46911227
+
+
+
+
+finally块的语句在try或catch中的return语句执行之后返回之前执行且finally里的修改语句可能影响也可能不影响try或catch中 return已经确定的返回值，若finally里也有return语句则覆盖try或catch中的return语句直接返回。
