--- a/todo
+++ b/todo
@@ -18,3 +18,7 @@ http://www.yiidian.com/spring/
 mavenc基础
 http://www.cnblogs.com/WJ5888/p/4354064.html
 http://www.cnblogs.com/WJ5888/p/4348506.html
+
+jvm  GC
+待补充内存模型详细
+http://www.cnblogs.com/WJ5888/p/4374791.html
