--- a/todo
+++ b/todo
@@ -26,3 +26,6 @@ http://gityuan.com/2016/01/09/java-memory/
 
 栈帧
 https://blog.csdn.net/cyp331203/article/details/44906623
+
+静态代理  装饰者模式 动态代理
+https://www.zhihu.com/question/20794107
