--- a/todo
+++ b/todo
@@ -29,3 +29,6 @@ https://blog.csdn.net/cyp331203/article/details/44906623
 
 静态代理  装饰者模式 动态代理
 https://www.zhihu.com/question/20794107
+
+lamda表达式详解
+https://www.cnblogs.com/figure9/archive/2014/10/24/4048421.html
