--- a/todo
+++ b/todo
@@ -32,3 +32,5 @@ https://www.zhihu.com/question/20794107
 
 lamda表达式详解
 https://www.cnblogs.com/figure9/archive/2014/10/24/4048421.html
+
+IoC(控制反转) 、DI(依赖注入)、AOP(面向切面)
