--- a/todo
+++ b/todo
@@ -34,3 +34,11 @@ lamda表达式详解
 https://www.cnblogs.com/figure9/archive/2014/10/24/4048421.html
 
 IoC(控制反转) 、DI(依赖注入)、AOP(面向切面)
+https://blog.csdn.net/PacosonSWJTU/article/details/52786216
+
+volatile关键字解读 多线程：原子性、有序性、可见性
+https://blog.csdn.net/lpjishu/article/details/80078898
+
+
+编程思想第四版
+https://blog.csdn.net/qq_26949717/article/details/77529621
