--- a/todo
+++ b/todo
@@ -42,3 +42,9 @@ https://blog.csdn.net/lpjishu/article/details/80078898
 
 编程思想第四版
 https://blog.csdn.net/qq_26949717/article/details/77529621
+
+正则表达式
+http://deerchao.net/tutorials/regex/regex.htm
+
+ssh视频
+https://study.163.com/course/courseLearn.htm?courseId=1004475015#/learn/video?lessonId=1048866298&courseId=1004475015
