--- a/todo
+++ b/todo
@@ -49,3 +49,7 @@ http://deerchao.net/tutorials/regex/regex.htm
 
 ssh视频
 https://study.163.com/course/courseLearn.htm?courseId=1004475015#/learn/video?lessonId=1048866298&courseId=1004475015
+
+Ij 快捷键
+自动生成变量  ctrl+alt+v
+查看继承关系 F4
