--- a/todo
+++ b/todo
@@ -64,3 +64,6 @@ https://blog.csdn.net/Somhu/article/details/78874634
 
 数据库连接池
 https://www.cnblogs.com/xdp-gacl/p/4002804.html
+
+序列化与反序列化
+https://www.cnblogs.com/xdp-gacl/p/3777987.html
