--- a/todo
+++ b/todo
@@ -67,3 +67,6 @@ https://www.cnblogs.com/xdp-gacl/p/4002804.html
 
 序列化与反序列化
 https://www.cnblogs.com/xdp-gacl/p/3777987.html
+
+格式化format
+https://www.cnblogs.com/Dhouse/p/7776780.html
